[package]
name = "steel-example-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
stabby.workspace = true
steel-plugin-api = { path = "../steel-plugin-api" }
steel-utils = { workspace = true }
log = { workspace = true }
