[package]
name = "steel-plugin-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Internal crates
steel-plugin-api.workspace = true
steel-utils.workspace = true

stabby.workspace = true
libloading.workspace = true
zip.workspace = true
rustc-hash.workspace = true

# Serialization
serde.workspace = true
toml.workspace = true

# Logging
log.workspace = true

[lints]
workspace = true
